--- a/src/css/reponsivo.css
+++ b/src/css/reponsivo.css
@@ -329,7 +329,7 @@
         inset: 0;
         flex-direction: column;
         justify-content: center;
-        background-image: url(../imagens/adulto-segurando-bola-de-luz1.jpg);
+        background-image: url(../imagens/adulto-segurando-bola-de-luz1.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom;
@@ -655,7 +655,7 @@
         inset: 0;
         flex-direction: column;
         justify-content: center;
-        background-image: url(../imagens/adulto-segurando-bola-de-luz1.jpg);
+        background-image: url(../imagens/adulto-segurando-bola-de-luz1.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom;
